--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 *.sln.docstates
 .Demos/
 Backend/Avatar
+Backend/save_data.json
+Backend/save_qr.png
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
